--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
       - devel
     paths-ignore:
       - 'demo/**'
+      - '.circleci'
   pull_request:
     types: [ opened, synchronize, reopened ]
     branches:
